@@ -16,6 +16,8 @@ import io.qdrant.client.grpc.Points.WriteOrderingType;
 import java.util.Arrays;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 /** Utility class for working with Points. */
 public class PointUtil {
@@ -30,7 +32,7 @@ public class PointUtil {
 
     PointsIdsList pointsIdsList =
         PointsIdsList.newBuilder()
-            .addAllIds(Arrays.stream(pointIds).mapToObj(PointUtil::pointId).toList())
+            .addAllIds(Arrays.stream(pointIds).mapToObj(PointUtil::pointId).collect(Collectors.toList()))
             .build();
 
     return PointsSelector.newBuilder().setPoints(pointsIdsList).build();
@@ -51,7 +53,7 @@ public class PointUtil {
     // Using map() instead
     PointsIdsList pointsIdsList =
         PointsIdsList.newBuilder()
-            .addAllIds(Arrays.stream(pointIds).map((String id) -> PointUtil.pointId(id)).toList())
+            .addAllIds(Arrays.stream(pointIds).map((String id) -> PointUtil.pointId(id)).collect(Collectors.toList()))
             .build();
 
     return PointsSelector.newBuilder().setPoints(pointsIdsList).build();
